// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering 1`] = `
[
  {
    "node": <p>
      Hello
    </p>,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "custom_profile_id": "11111",
              "message_data": {
                "attachment": undefined,
                "text": "Hello",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
  {
    "node": <p>
      World
    </p>,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "custom_profile_id": "11111",
              "message_data": {
                "attachment": undefined,
                "text": "World",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with media content 1`] = `
[
  {
    "node": <p>
      Hello
    </p>,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "custom_profile_id": undefined,
              "message_data": {
                "attachment": undefined,
                "text": "Hello",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
  {
    "node": <Photo
      shared={true}
      url="http://foo.bar/baz.png"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": [
        {
          "params": {
            "additional_owners": undefined,
            "media_category": "dm_image",
            "shared": "true",
          },
          "type": "url",
          "url": "http://foo.bar/baz.png",
        },
      ],
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "custom_profile_id": undefined,
              "message_data": {
                "attachment": {
                  "media": {
                    "id": "",
                  },
                  "type": "media",
                },
                "quick_reply": {
                  "options": [
                    {
                      "description": undefined,
                      "label": "foo",
                      "metadata": undefined,
                    },
                  ],
                  "type": "options",
                },
                "text": undefined,
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with quick replies 1`] = `
[
  {
    "node": <p>
      Hello World
    </p>,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "custom_profile_id": undefined,
              "message_data": {
                "attachment": undefined,
                "text": "Hello World",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
  {
    "node": <p>
      Choose One
    </p>,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "custom_profile_id": undefined,
              "message_data": {
                "attachment": undefined,
                "quick_reply": {
                  "options": [
                    {
                      "description": "FOOOOOOO",
                      "label": "foo",
                      "metadata": "FOO",
                    },
                    {
                      "description": "BAAAAAAR",
                      "label": "bar",
                      "metadata": "BAR",
                    },
                    {
                      "description": "BAAAAAAZ",
                      "label": "baz",
                      "metadata": "BAZ",
                    },
                  ],
                  "type": "options",
                },
                "text": "Choose One",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;
